@@ -1,3 +1,4 @@
 require("prototypes.sprites")
 require("prototypes.styles")
+require("prototypes.signal")
 require("prototypes.shortcuts")
