@@ -82,3 +82,13 @@ tlbe-sequential-names=Use sequential numbering per camera for the screenshot num
 tlbe=Time Lapse Base Edition
 tlbe-pause=Pause all TLBE cameras
 tlbe-screenshot=Take a screenshot using the selected camera
+
+[virtual-signal-name]
+signal-capture-north-west=North-west corner of the snapshot capture
+signal-capture-north-east=North-east corner of the snapshot capture
+signal-capture-south-east=South-east corner of the snapshot capture
+signal-capture-south-west=South-west corner of the snapshot capture
+signal-target-north-west=North-west corner of the snapshot target
+signal-target-north-east=North-east corner of the snapshot target
+signal-target-south-east=South-east corner of the snapshot target
+signal-target-south-west=South-west corner of the snapshot target
