@@ -56,7 +56,7 @@ for player_index, player in pairs(game.players) do
             camera.zoomPeriod = nil
             camera.zoomTicks = nil
             camera.zoomTicksRealtime = nil
-
+            camera.chartTags = {}
             camera.showGUI = false
         end
     end
