@@ -4,6 +4,7 @@ Version: 1.5.0
   Features:
     - Add toggle/shortcut to take a screenshot (on paused active camera)
     - Add option to include GUI in screenshots (requires to have same camera resolution as game/screen resolution to make this look good)
+    - Visualize capture regions on the map. (Thanks drdozer)
 
   Changes:
     - Use 10 digits for screenshot numbers.
